# ChangeLog for app-portage/portage-bashrc-mv
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

*portage-bashrc-mv-10.12 (21 May 2012)

  21 May 2012; Martin Väth <martin@mvath.de>
  Version bump, remove old ebuild.

*portage-bashrc-mv-10.11 (20 May 2012)

  20 May 2012; Martin Väth <martin@mvath.de>
  Version bump, remove old ebuild.

*portage-bashrc-mv-10.9 (11 May 2012)

  12 May 2012; Martin Väth <martin@mvath.de>
  base->eutils

  11 May 2012; Martin Väth <martin@mvath.de>
  Version bump, remove old ebuild.

*portage-bashrc-mv-10.8 (07 May 2012)

  07 May 2012; Martin Väth <martin@mvath.de>
  Version bump, remove old ebuild.

*portage-bashrc-mv-10.7 (08 Apr 2012)

  15 Apr 2012; Martin Väth <martin@mvath.de>
  Inherit base

  08 Apr 2012; Martin Väth <martin@mvath.de>
  Version bump, remove old ebuild.

*portage-bashrc-mv-10.6 (13 Mar 2012)

  19 Mar 2012; Martin Väth <martin@mvath.de>
  Use vcs-snapshot.eclass, remove old ebuild.

  13 Mar 2012; Martin Väth <martin@mvath.de>
  Version bump. Keep old ebuild, since release is experimental.

*portage-bashrc-mv-10.3 (28 Feb 2012)

  28 Feb 2012; Martin Väth <martin@mvath.de>
  Version bump, remove old ebuild.

*portage-bashrc-mv-10.2 (19 Feb 2012)

  19 Jan 2012; Martin Väth <martin@mvath.de>
  Version bump, remove old ebuild. Support CPPFLAGS.

*portage-bashrc-mv-10.1 (06 Jan 2012)

  06 Jan 2012; Martin Väth <martin@mvath.de>
  Version bump, remove old ebuild.

*portage-bashrc-mv-10.0 (19 Dec 2011)

  19 Nov 2011; Martin Väth <martin@mvath.de>
  New ebuild from scratch.