@@ -1,1 +1,1 @@
-DIST portage-bashrc-mv-10.12.tar.gz 9464 RMD160 9fdbb2e4ea039e7f5988fc073adcc8bd025f1b05 SHA1 c507fc8d28329d24f20aaef7ba2dad33c56c0898 SHA256 f0b9a7fb0aa873ef31c89aa689cd609582c8c6277f50b3b8adfa33123f17374f
+DIST portage-bashrc-mv-11.0.tar.gz 9430 RMD160 19595d92f492196b83a0012484497b3a96566074 SHA1 f98768cf87896e07e989ac986c50794b3683c9d7 SHA256 7e063f36f8b48cf03f4ccc273df92f1d68dc35ed71ae67f5b87fac7c3fc0b77f
