@@ -6,24 +6,23 @@ EAPI="4"
 RESTRICT="mirror"
 inherit eutils vcs-snapshot
 
-DESCRIPTION="Plugin for FETCHCOMMAND to help organize and cleanup your DISTDIR"
-HOMEPAGE="https://github.com/vaeth/trickyfetch/"
+DESCRIPTION="Provide support for /etc/portage/bashrc.d and /etc/portage/package.cflags"
+HOMEPAGE="https://github.com/vaeth/portage-bashrc-mv/"
 SRC_URI="http://github.com/vaeth/${PN}/tarball/release-${PV} -> ${P}.tar.gz"
 
 LICENSE="GPL-2"
 SLOT="0"
 KEYWORDS="~amd64 ~x86"
-IUSE="zsh-completion"
+IUSE="+eix"
+
+RDEPEND="eix? ( >=app-portage/eix-0.25.6 )"
 
 src_prepare() {
 	epatch_user
 }
 
 src_install() {
-	dobin bin/*
-	if use zsh-completion
-	then	insinto /usr/share/zsh/site-functions
-			doins zsh/_*
-	fi
-	dodoc README
+	insinto /etc/portage
+	doins -r bashrc bashrc.d
+	docompress /etc/portage/bashrc.d/README
 }
