@@ -1,1 +1,1 @@
-DIST trickyfetch-6.9.tar.gz 9182 RMD160 070817e8b83a6591eb280ac5141f4f535474682c SHA1 04d22ee9bb5a9eb42af699caed42f03078155890 SHA256 c897c2324aedfda9148cb203a01633a7104027c09385a95c15e715258543b576
+DIST trickyfetch-7.0.tar.gz 9746 RMD160 c9206e4fb0a59e2a36a0d1af01bff6bf8bb6974c SHA1 7cc86dc1f0ad8341b98849d1407c7f8617cecfc8 SHA256 7a84eec3866a3030e6c05ac640d45c2c6a670c2be01857a0dc8b27d6da5c8e96
