@@ -2,6 +2,12 @@
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*trickyfetch-7.0 (16 Jun 2012)
+
+  16 Jun 2012; Martin Väth <martin@mvath.de>
+  Version bump, remove old ebuild. Make NODELTA a masklist. Support
+  DELTA_EXCLUDE. Do not call getdelta on later mirrors. Quicker with eix.
+
 *trickyfetch-6.9 (09 Jun 2012)
 
   09 Jun 2012; Martin Väth <martin@mvath.de>
