@@ -2,6 +2,11 @@
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*portage-bashrc-mv-11.0 (16 Jun 2012)
+
+  16 Jun 2012; Martin Väth <martin@mvath.de>
+  Version bump, remove old ebuild. Use masked-packages from app-portage/eix
+
 *portage-bashrc-mv-10.12 (21 May 2012)
 
   21 May 2012; Martin Väth <martin@mvath.de>
